# hades-lang

./: .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .hdcflags  404.html  CMakeLists.txt  Cargo.toml  README.md  bootstrap_test.sh  build-libhadesboot.sh  build.gradle  build.gradle.kts  build.sbt  build.sh  build_all_distributions.sh  build_libhdc.sh  default.properties  distribution_smoke_test.py  generate_copy.py  generate_ops.py  hades-server  hades-server.object  index.html  install.py  libhadesboot.dylib  package.json  run_stdlib_tests.py  runtime.c  settings.gradle  test.sh  windows_compile.bat
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  gradle.yml  linux.yml  release-master.yml  release.yml  windows.yml
.vuepress/: config.js
bindings/: cjson.hds  gl.hds  glfw.hds  gtk.hds
design/: ref.md
docs/: 404.html  Getting Started.html  index.html
docs-src/: README.md  mkdocs.yml
docs-src/docs/: index.md
examples/gtk-hello-world/: .gitignore  Makefile  README.md  build.sh  gtk.hds  main.c  main.hds
examples/gui-app/: README.md  glfw_app.c  glfw_app.hds
examples/web-server/: .gitignore  Makefile  bind_socket.c  main.hds  start_server.c  utils.c
gradle/wrapper/: gradle-wrapper.properties
hades/: test.py
hades-il/: CMakeLists.txt  README.md
hades-language-server/: build.gradle
hades/src/: hdctest.hds  llvm.hds
hadesboot/: .gitignore  README.md  build-libhadesboot.sh  build.gradle  build.gradle.kts  detekt.yml  libhadesboot.cpp
hadesboot-middle/: build.gradle.kts
hadesboot/suite/: allocation.hds  basic_structs.hds  booleans.hds  enums.hds_  explicit_type_arguments.hds  function_call_constraint_check.errors  generic_structs.hds  global_constants.hds  import_struct.hds  interfaces.hds  interfaces.stdout  local_variables.hds  local_variables.stdout  pointers.hds
hadesc/: build.gradle  runtime.c
hadesc/stdlib/: libc.hds  memory.hds
hadesc/suite/: allocation.hds  basic_structs.hds  enums.hds  extensions.hds  extensions.stdout  function_call_constraint_check.errors  function_call_constraint_check.hds  function_types_and_values.hds  functions_with_return_values.hds  functions_with_return_values.stdout  functions_without_args.hds  functions_without_args.stdout  generic_structs.hds  hello_world.hds  if_else.hds  if_else.stdout  import_as.hds  import_as.stdout  interface_type_checking.errors  interfaces.hds  interfaces.stdout  mutable_locals.hds  operators.hds  pointer_cast.hds  size_of.hds  (+4 more)
hscript/: .gitignore  CMakeLists.txt  Makefile
hscript/src/vm/: CMakeLists.txt  wren_common.h  wren_value.h  wren_vm.c
ide/: main.hds
lib/: CMakeLists.txt
lib/analysis/: CMakeLists.txt  NameResolutionResult.cpp  NameResolver.cpp  NameResolverImpl.cpp  NameResolverImpl.h  ScopeNode.cpp  ScopeNode.h  ScopeTree.cpp  ScopeTree.h  ScopeTreeBuilder.cpp  ScopeTreeBuilder.h  TypeResolver.cpp  TypeResolverImpl.cpp  TypeResolverImpl.h  Typer.cpp
lib/analysis/include/hades/analysis/: NameResolutionResult.h  NameResolver.h  TypeResolutionResult.h  TypeResolver.h  Typer.h
lib/ast/: Block.cpp  CMakeLists.txt  Declaration.cpp  Expression.cpp  FunctionSignature.cpp  Identifier.cpp  Param.cpp  SourceFile.cpp  Statement.cpp  Type.cpp  TypeAnnotation.cpp
lib/ast/include/hades/ast/: ASTNode.h  Block.h  Declaration.h  Expression.h  FunctionSignature.h  Identifier.h  Param.h  SourceFile.h  Statement.h  Type.h  TypeAnnotation.h
lib/base/: CMakeLists.txt  sys.cpp
lib/base/include/hades/: base.h
lib/base/include/hades/base/: BumpPtrAllocator.h  Result.h  Variant.h  data.h  sys.h
lib/context/: CMakeLists.txt  Context.cpp  ContextImpl.cpp  ContextImpl.h
lib/context/include/hades/context/: Context.h
lib/core/: CMakeLists.txt  CommandLineFlags.cpp  Context.cpp  ContextImpl.cpp  ContextImpl.h  InternedString.cpp  Interner.cpp  location.cpp
lib/core/include/hades/core/: InternedString.h  Interner.h  QualifiedName.h  location.h
lib/hir/: CMakeLists.txt  Type.cpp
lib/hir/include/hades/hir/: Type.h
lib/irgen/: CMakeLists.txt  IRGen.cpp  IRGenImpl.cpp  IRGenImpl.h
lib/irgen/include/hades/context/: Context.h
lib/irgen/include/hades/irgen/: IRGen.h
lib/parsing/: CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  ParserImpl.cpp  ParserImpl.h  Token.cpp  Token.h  parse_declaration.cpp  parse_expression.cpp  parse_statement.cpp  parse_type.cpp
lib/parsing/include/hades/parsing/: Parser.h
project/: .gitignore  plugins.sbt
search/: search_index.json
src/: ast.rs  cli.rs  hades-server.hds  lexer.rs  main.hds  main.rs  parser.rs
stdlib/: libc.c  libc.hds  libhdc.c  libhdc.h  memory.hds  posix.c  posix.hds  ref_counting.hds  runtime.c
test/: abi_large_structs_by_value.c  abi_large_structs_by_value.hds  abi_large_structs_by_value.stdout  abi_medium_structs_by_value.hds  address_of_ref_struct_checking.errors  address_of_ref_struct_checking.hds  align_of.hds  allocation.hds  angle_bracket_type_application.hds  array_as_parameter_disabled.errors  array_as_parameter_disabled.hds  array_in_struct.hds  array_local.hds  array_test.hds  array_types.hds  as_expression.hds  assigning_to_local_in_closure.hds  associated_types.hds  associated_types.stdout  basic_structs.hds  block_statement.hds  booleans.hds  bug_84.hds  bug_check_where_clause_in_extension.errors  bug_check_where_clause_in_extension.hds  bug_closure_capture_function_parameter.hds  bug_closure_capture_in_body_with_method_calls.hds  bug_defer_with_closure_function.hds  bug_enum_constructor_without_param_in_closure.hds  bug_enum_unaligned_load.c  bug_enum_unaligned_load.hds  bug_enum_unaligned_load.hds.disabled  bug_inference_loop.disabled  bug_llvm_c_api_cursor_ffi.c  bug_llvm_c_api_cursor_ffi.hds  bug_llvm_c_api_cursor_ffi.hds_  bug_llvm_c_api_cursor_ffi.stdout  bug_refer_to_function_param_from_a_nested_closure.hds  bug_type_check_nullptr_arg.errors  bug_type_check_nullptr_arg.hds  (+263 more)
tree-sitter-hades/: .editorconfig  .gitignore  grammar.js  package.json
vscode-hades/: README.md  language-configuration.json  tsconfig.json  vsc-extension-quickstart.md
(+530 files in other folders)
